Fix layout bugs

--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -31,7 +31,7 @@ $header-padding: 1em;
     margin-right: 1em;
 
     a:hover {
-      //border-bottom: none;
+      border-bottom: none;
     }
 
     .header-logo {
