--- a/styles/modules/_user.scss
+++ b/styles/modules/_user.scss
@@ -4,48 +4,47 @@
   .user-list {
     display: table;
     padding: 1em 0;
+  }
 
-    .user-list-heading {
-      display: table-header-group;
-      font-weight: 600;
+  .user-list-heading {
+    display: table-header-group;
+    font-weight: 600;
 
-      span {
-        display: table-cell;
-        padding: 0 1.2em 0.8em 0;
-      }
+    span {
+      display: table-cell;
+      padding: 0 1.2em 0.8em 0;
     }
+  }
 
-    .user-list-item {
-      display: table-row;
+  .user-list-item {
+    display: table-row;
 
-      span {
-        display: table-cell;
-        padding: 0 1.2em 0.5em 0;
-      }
+    span {
+      display: table-cell;
+      padding: 0 1.2em 0.5em 0;
     }
+  }
 
-    input {
-      margin-bottom: 0.8em;
-    }
+  input {
+    margin-bottom: 0.8em;
+  }
 
-    label {
-      display: block;
-      margin-bottom: 0.3em;
-    }
+  label {
+    display: block;
+    margin-bottom: 0.3em;
+  }
 
-    .button {
-      margin-top: 0.8em;
-      float: right;
-    }
+  .button {
+    margin-top: 0.8em;
+  }
 
-    .delete {
-      display: block;
-      background-color: $c-error;
-      color: black;
+  .delete {
+    display: block;
+    background-color: $c-error;
+    color: black;
 
-      &:hover {
-        background: lighten($c-error, 20%);
-      }
+    &:hover {
+      background: lighten($c-error, 20%);
     }
   }
 
